<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorf2f2"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frag_main_refresh">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--顶部幻灯片-->
                <cn.xiaochebao.app.view.SlideView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_main_viewFlipper">

                </cn.xiaochebao.app.view.SlideView>

                <!--中间项目-->
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_main_recycler">

                </android.support.v7.widget.RecyclerView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mt30">

                </LinearLayout>
                <!--底部-->
                <LinearLayout
                    android:id="@+id/frag_main_bottom_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mt4"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="@drawable/ada_shadow"
                    android:baselineAligned="false"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/mt8"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/frag_main_tv_1"
                            android:textColor="@color/gray"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/frag_main_tv_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text=""
                            android:textColor="@color/magenta"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/frag_main_tv_unit"
                            android:textColor="@color/low_gray"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/mt8"
                        android:background="@color/white"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/frag_main_tv_2"
                            android:textColor="@color/gray"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/frag_main_tv_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:gravity="center"
                            android:text=""
                            android:textColor="@color/orange"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:gravity="center"
                            android:text="@string/frag_main_tv_unit"
                            android:textColor="@color/low_gray"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/mt8"
                        android:background="@color/white"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/frag_main_tv_3"
                            android:textColor="@color/gray"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/frag_main_tv_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:gravity="center"
                            android:text=""
                            android:textColor="@color/gray"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:gravity="center"
                            android:text="@string/frag_main_tv_unit"
                            android:textColor="@color/low_gray"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
